Master4429 Mod Files/MinecraftForgeGradle/.gradle/gradle.log
This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.

#################################################
         ForgeGradle 2.3-SNAPSHOT-27b9d44        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
                 Powered by MCP                  
             http://modcoderpack.com             
     by: Searge, ProfMobius, R4wk, ZeuX          
     Fesh0r, IngisKahn, bspkrs, LexManos         
#################################################
:deobfCompileDummyTask
:deobfProvidedDummyTask
:sourceApiJava UP-TO-DATE
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavaC:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:33: error: illegal start of type
public class SoundsHandler {package com.hassam.mythocraft.mod.util.handlers;
                            ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:33: error: ';' expected
public class SoundsHandler {package com.hassam.mythocraft.mod.util.handlers;
                                   ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:33: error: illegal start of type
public class SoundsHandler {package com.hassam.mythocraft.mod.util.handlers;
                                       ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:33: error: ';' expected
public class SoundsHandler {package com.hassam.mythocraft.mod.util.handlers;
                                              ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:33: error: <identifier> expected
public class SoundsHandler {package com.hassam.mythocraft.mod.util.handlers;
                                                                           ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:41: error: illegal start of type
import com.hassam.mythocraft.util.Reference;
^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:41: error: ';' expected
import com.hassam.mythocraft.util.Reference;
      ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:41: error: illegal start of type
import com.hassam.mythocraft.util.Reference;
          ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:41: error: ';' expected
import com.hassam.mythocraft.util.Reference;
                 ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:41: error: <identifier> expected
import com.hassam.mythocraft.util.Reference;
                                           ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:45: error: illegal start of type
import net.minecraft.util.ResourceLocation;
^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:45: error: ';' expected
import net.minecraft.util.ResourceLocation;
      ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:45: error: illegal start of type
import net.minecraft.util.ResourceLocation;
          ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:45: error: ';' expected
import net.minecraft.util.ResourceLocation;
                    ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:45: error: <identifier> expected
import net.minecraft.util.ResourceLocation;
                                          ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:49: error: illegal start of type
import net.minecraft.util.SoundEvent;
^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:49: error: ';' expected
import net.minecraft.util.SoundEvent;
      ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:49: error: illegal start of type
import net.minecraft.util.SoundEvent;
          ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:49: error: ';' expected
import net.minecraft.util.SoundEvent;
                    ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:49: error: <identifier> expected
import net.minecraft.util.SoundEvent;
                                    ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:53: error: illegal start of type
import net.minecraftforge.fml.common.registry.ForgeRegistries;
^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:53: error: ';' expected
import net.minecraftforge.fml.common.registry.ForgeRegistries;
      ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:53: error: illegal start of type
import net.minecraftforge.fml.common.registry.ForgeRegistries;
          ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:53: error: ';' expected
import net.minecraftforge.fml.common.registry.ForgeRegistries;
                         ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\util\handlers\SoundsHandler.java:53: error: <identifier> expected
import net.minecraftforge.fml.common.registry.ForgeRegistries;
                                                             ^
25 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 10.399 secs
